tests/baselines/reference/enumUsedBeforeDeclaration.errors.txt
tests/cases/compiler/enumUsedBeforeDeclaration.ts(1,18): error TS2450: Enum 'Color' used before its declaration.


==== tests/cases/compiler/enumUsedBeforeDeclaration.ts (1 errors) ====
    const v: Color = Color.Green;
                     ~~~~~
!!! error TS2450: Enum 'Color' used before its declaration.
    const v2: ConstColor = ConstColor.Green;
    enum Color { Red, Green, Blue }
    const enum ConstColor { Red, Green, Blue }
    
    